# poly-kit

./: .gitattributes  .gitignore  .golangci.yml  .goreleaser.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  RELEASING.md  go.mod  go.sum  lychee.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.devcontainer/: Dockerfile  README.md  devbox.json  devcontainer.json  flake.nix  install-ai-tools.sh  post-create.sh
.devcontainer/ai/: claude.sh  codex.sh  continue.sh  copilot.sh  crush.sh  gemini.sh  opencode.sh  vibe.sh
.githooks/: pre-push
.github/: .release-please-manifest.json  CODEOWNERS  release-please-config.json
.github/tests/: bootstrap-scenarios-kit.bats  cli-demo-media.bats  pre-push-hook.bats
.github/workflows/: build.yml  changelog-rewrite.yml  ci.yml  cli-demo-media.yml  coverage.yml  dogfood-grade.yml  lint.yml  mirror-sync.yml  nightly-release.yml  publish.yml  refresh-rules.yml  release-please.yml  release-promote-gate.yml  templates.yml  verify-no-leak-audit.yml
cmd/: README.md
cmd/kit/: README.md  config_test.go  events.go  events_test.go  main.go  serve.go  serve_branches.go  serve_branches_integration_test.go  serve_branches_test.go  serve_events_test.go  serve_history_test.go  serve_pruning.go  serve_pruning_integration_test.go  serve_pruning_test.go  serve_restart_test.go  serve_test.go  symlink.go  symlink_dryrun_e2e_test.go  symlink_dryrun_test.go  symlink_test.go  toolspec.go  toolspec_test.go
cmd/kit-bus-emit/: doc.go  main.go  main_test.go  payload.go  payload_test.go  post.go  post_test.go
cmd/routellm-server/: README.md  main.go
contracts/: README.md  bridge.proto  bridge.schema.json  story-schema.json  toolspec.telemetry.md
contracts/httpcache-v1/: cacheability.json
contracts/parity/: README.md  parity.go  parity.json  parity_test.go
contracts/proto/: README.md
contracts/typeid-v1/: fixtures.json
docs/: README.md
docs/adopters/: README.md  quickstart.md
docs/adr/: 0001-typeid-primitive.md  0002-llm-pool-routing-primitives.md  0003-cite-consolidates-uri-and-hdl.md  0035-runtime-telemetry.md  0036-kit-consent.md  0037-consenting-telemetry-factor.md  0038-sdk-telemetry-contract.md  README.md
docs/announcements/: 2026-05-typeid-primitive.md
docs/contracts/: event-topics.md  ext-discover-protocol.md  kit-init-dotgithub-wiring.md  kit-init-pr-wiring.md
engine/: README.md
engine/sdk/py-kit-engine/: README.md  pyproject.toml
engine/sdk/py-kit-engine/kit_engine/: __init__.py  _binary.py  collection.py  events.py  identity.py  peers.py  sync.py
engine/sdk/py-kit-engine/tests/: test_collection.py  test_engine.py
examples/: README.md
examples/spaced/py/: Makefile  README.md  data.py  pyproject.toml  spaced.py  test_telemetry_wiring.py
examples/spaced/py/commands/: abort.py  alias.py  competitor.py  compliance_cmd.py  config.py  countdown.py  daemon.py  elon.py  fleet.py  ipo.py  launch.py  mission.py  starship.py  telemetry.py  toolspec_cmd.py  uri_cmd.py
go/: README.md
incubator/: README.md
scripts/: bootstrap-scenarios-kit.sh  install-hooks.sh  preflight.sh  promote-release.sh  rewrite-changelog.sh  setup-pypi-publisher.sh  test-release-e2e.sh  verify-tier1.sh
sdk/: README.md
sdk/experimental/rs/: .gitignore  CHANGELOG.md  Cargo.toml  README.md
sdk/experimental/rs/src/: api.rs  lib.rs  output.rs  uri.rs
sdk/experimental/rs/src/id/: mod.rs
sdk/experimental/rs/src/output/: builtins.rs  column.rs  dispatch.rs  flags.rs  formatter.rs  option.rs  registry.rs
sdk/experimental/rs/src/output/builtins/: json.rs  table.rs  yaml.rs
sdk/experimental/rs/src/telemetry/: client.rs  consent.rs  install_id.rs  mod.rs  mode.rs  redact.rs
sdk/experimental/rs/tests/: api_test.rs  client.rs  consent.rs  contract.rs  install_id.rs  mode.rs  output.rs  redact.rs
sdk/py/: .gitignore  CHANGELOG.md  README.md  pyproject.toml  ruff.toml
sdk/py/hop_top_kit/: README.md  __init__.py  aim.py  alias.py  auth.py  bus.py  cli.py  completion.py  compliance.py  config.py  errcorrect.py  flagregister.py  hint.py  llm.py  log.py  progress.py  provenance.py  routellm_adapter.py  routellm_grpc.py  safety.py  scope-defaults.json  scope.py  setflag.py  sqlstore.py  stream.py  textflag.py  toolspec.py  upgrade.py  uri.py  wizard.py  xdg.py
sdk/py/hop_top_kit/id/: __init__.py  _core.py  _pydantic.py
sdk/py/hop_top_kit/output/: __init__.py  cli.py  dispatch.py  format_help.py  formatter.py  projection.py  registry.py
sdk/py/hop_top_kit/output/formatters/: __init__.py  csv_formatter.py  json_formatter.py  table_formatter.py  text_formatter.py  yaml_formatter.py
sdk/py/hop_top_kit/telemetry/: __init__.py  client.py  consent.py  install_id.py  mode.py  redact.py
sdk/py/hop_top_kit/tui/: __init__.py  anim.py  badge.py  confirm.py  pills.py  progress.py  select.py  spinner.py  status.py
sdk/py/tests/: README.md  test_aim.py  test_alias.py  test_auth.py  test_bus.py  test_cli.py  test_cols.py  test_completion.py  test_compliance.py  test_config.py  test_csv.py  test_dispatch.py  test_errcorrect.py  test_flagregister.py  test_format_help.py  test_formatter.py  test_hint.py  test_id.py  test_id_contract.py  test_integration.py  test_llm.py  test_log.py  test_output.py  test_output_routing.py  test_progress.py  test_provenance.py  test_registry.py  test_routellm_adapter.py  test_routellm_grpc.py  test_safety.py  test_scope.py  test_setflag.py  test_sqlstore.py  test_stream.py  test_telemetry_client.py  test_telemetry_consent.py  test_telemetry_install_id.py  test_telemetry_mode.py  test_telemetry_redact.py  test_template.py  (+7 more)
sdk/py/tests/testdata/: api-fixture.json
sdk/py/tests/tui/: test_anim.py  test_badge.py  test_confirm.py  test_pills.py  test_progress.py  test_select.py  test_spinner.py  test_status.py
templates/: CONFORM.md  README.md  RUNBOOK-UPGRADE.md  build.sh  conform-actions.sh  conform.sh  folder-structure.md  lib.sh  reserve-packages.sh  scaffold.sh  setup-release-please.sh  test-e2e.sh  test-kit-init-idempotency.sh  test-scaffold-e2e.sh
tools/: README.md
(+2308 files in other folders)
