[package]
name = "hop-top-kit"
version = "0.4.0-experimental.2"
edition = "2021"
license = "MIT"
description = "Cross-language CLI UX parity toolkit"

[features]
default = []
api = ["dep:reqwest", "dep:serde", "dep:serde_json", "dep:tokio"]
uri = ["dep:hop-top-uri"]

[dependencies]
hop-top-uri = { version = "0.2.0-alpha.0", optional = true }
reqwest = { version = "0.12", features = ["json"], optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
tokio = { version = "1", features = ["full"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
mockito = "1"
serde = { version = "1", features = ["derive"] }
