[package]
name = "hop-top-kit"
version = "0.4.0-experimental.3"
edition = "2021"
license = "MIT"
description = "Cross-language CLI UX parity toolkit"

[features]
default = []
api = ["dep:reqwest", "dep:serde", "dep:serde_json", "dep:tokio"]
uri = ["dep:hop-top-cite"]
output = ["dep:serde", "dep:serde_json", "dep:serde_yaml", "dep:thiserror", "dep:comfy-table"]
cli = ["output", "dep:clap"]
id = ["dep:mti", "dep:uuid", "dep:serde", "dep:thiserror"]
telemetry = [
    "dep:tokio",
    "dep:reqwest",
    "dep:serde",
    "dep:serde_json",
    "dep:serde_yaml",
    "dep:sha2",
    "dep:getrandom",
    "dep:dirs",
    "dep:regex",
    "dep:thiserror",
]

[dependencies]
hop-top-cite = { version = "0.1.0", optional = true }
reqwest = { version = "0.12", features = ["json"], optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
serde_yaml = { version = "0.9", optional = true }
sha2 = { version = "0.10", optional = true }
getrandom = { version = "0.2", optional = true }
dirs = { version = "5", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
regex = { version = "1", optional = true }
thiserror = { version = "1", optional = true }
clap = { version = "4", features = ["derive", "string"], optional = true }
comfy-table = { version = "7", default-features = false, optional = true }
mti = { version = "1.1.1", features = ["serde"], optional = true }
uuid = { version = "1", features = ["v7", "serde"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
mockito = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
uuid = { version = "1", features = ["v7", "serde"] }
